# device_soc_esp

./: BUILD.gn  Kconfig.liteos_m.soc  OAT.xml  README.md  README_ZH.md  README_zh.md
esp32/: BUILD.gn  Kconfig.liteos_m.defconfig.esp32_u4wdh  Kconfig.liteos_m.defconfig.series  Kconfig.liteos_m.series  Kconfig.liteos_m.soc  NOTICE  README_zh.md
esp32/components/: BUILD.gn  sdkconfig.h
esp32/components/bootloader_support/src/idf/: bootloader_sha.c
esp32/components/bt/common/osi/include/osi/: mutex.h
esp32/components/bt/controller/esp32/: bt.c
esp32/components/bt/host/bluedroid/bta/dm/include/: bta_dm_int.h
esp32/components/bt/host/bluedroid/btc/profile/std/spp/: btc_spp.c
esp32/components/driver/: adc_common.c  gpio.c  i2c.c  spi_slave.c  uart.c
esp32/components/driver/include/driver/: gpio.h  i2c.h  spi_common_internal.h  uart.h
esp32/components/esp32/: spiram_psram.c
esp32/components/esp_common/src/: freertos_hooks.c  task_wdt.c
esp32/components/esp_lwip/: lwip_porting.gni
esp32/components/esp_lwip/lwip/src/include/lwip/: netif.h
esp32/components/esp_lwip/port/include/lwip/: netif.h
esp32/components/esp_netif/lwip/: esp_netif_lwip.c
esp32/components/esp_pm/: pm_locks.c
esp32/components/esp_pm/include/: esp_pm.h
esp32/components/esp_pm/include/esp32/: pm.h
esp32/components/esp_pm/include/esp_private/: pm_impl.h  pm_trace.h
esp32/components/esp_ringbuf/include/: ringbuf.h
esp32/components/esp_ringbuf/include/freertos/: ringbuf.h
esp32/components/esp_system/: startup.c  system_api.c
esp32/components/esp_system/port/arch/xtensa/: panic_handler_asm.S
esp32/components/esp_timer/src/: esp_timer.c
esp32/components/esp_wifi/esp32/: esp_adapter.c
esp32/components/esp_wifi/src/: phy_init.c  smartconfig_ack.c  wifi_init.c
esp32/components/esptool_py/esptool/flasher_stub/include/: miniz.h
esp32/components/freertos/: FreeRTOS-openocd.c
esp32/components/freertos/include/freertos/: FreeRTOS.h  semphr.h  task.h
esp32/components/freertos/port/xtensa/include/freertos/: FreeRTOSConfig.h  portmacro.h  xtensa_rtos.h
esp32/components/libs/: esp32.project.ld  esp32.rom.tw.ld
esp32/components/log/include/: esp_log.h
esp32/components/lwip/: BUILD.gn
esp32/components/lwip/apps/ping/: ping_sock.c
esp32/components/lwip/lwip/src/api/: netdb.c
esp32/components/lwip/lwip/src/apps/http/: fsdata.c  httpd_structs.h
esp32/components/lwip/lwip/src/apps/http/makefsdata/: makefsdata.c
esp32/components/lwip/lwip/src/apps/smtp/: smtp.c
esp32/components/lwip/lwip/src/apps/snmp/: snmp_snmpv2_framework.c  snmp_snmpv2_usm.c
esp32/components/lwip/lwip/src/include/lwip/: sockets.h
esp32/components/lwip/lwip/src/include/lwip/apps/: smtp.h  smtp_opts.h  snmp_snmpv2_framework.h  snmp_snmpv2_usm.h
esp32/components/lwip/lwip/src/include/lwip/priv/: memp_std.h
esp32/components/lwip/port/esp32/: no_vfs_syscalls.c
esp32/components/lwip/port/esp32/include/: lwipopts.h
esp32/components/lwip/port/esp32/include/lwip/: ip6_addr.h  lwipopts.h
esp32/components/mbedtls/port/: esp_bignum.c  esp_hardware.c
esp32/components/mbedtls/port/esp32/: bignum.c
esp32/components/newlib/: locks.c  syscalls.c  time.c
esp32/components/oh_driver_hal/: adc.c  gpio.c  oled.c  uart.c
esp32/components/osal/: liteos_m.c
esp32/components/osal/port/xtensa/: xtensa_overlay_os_hook.c
esp32/components/pthread/: pthread.c  pthread_local_storage.c
esp32/components/spi_flash/: cache_utils.c
esp32/components/vfs/: vfs.c  vfs_semihost.c
esp32/components/vfs/include/: esp_vfs.h
esp32/components/wpa_supplicant/port/include/: byteswap.h
esp32/components/wpa_supplicant/src/common/: rrm.h
esp32/components/wpa_supplicant/src/crypto/: crypto_mbedtls.c  libtommath.h
esp32/components/wpa_supplicant/src/eap_peer/: chap.c  mschapv2.c  mschapv2.h
esp32/components/wpa_supplicant/src/tls/: libtommath.h
esp32_wrover_ie/: Kconfig.liteos_m.soc
esp32_wrover_ie/liteos_m/components/fs/: fs_init.c
esp32_wrover_ie/liteos_m/sdk/: BUILD.gn
esp32_wrover_ie/liteos_m/sdk/rtos/liteos/liteos_m/: target_config.h
esp32_wrover_ie/liteos_m/sdk/scripts/link/: ESP32.ld
