# Copyright (c) 2022 Hunan OpenValley Digital Industry Development Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//kernel/liteos_m/liteos.gni")
import("$LITEOSTHIRDPARTY/lwip/lwip.gni")
import("$LITEOSTOPDIR/components/net/lwip-2.1/lwip_porting.gni")

module_switch = defined(LOSCFG_NET_LWIP_SACK)
module_name = get_path_info(rebase_path("."), "name")
kernel_module(module_name) {
  sources = []
#  sources = LWIP_PORTING_FILES + LWIPNOAPPSFILES
#            [ "$LWIPDIR/api/sockets.c" ] + [ "porting/src/ethernetif.c" ]
  defines = [ "LITEOS_LWIP=1" ]
  defines += [
    "ESP_PLATFORM",
    "IDF_VER=\"v4.3.1-dirty\"",
    "NDEBUG",
    "_GNU_SOURCE",
    "UNITY_INCLUDE_CONFIG_H",
    "MBEDTLS_CONFIG_FILE=\"mbedtls/esp_config.h\"",
    "HAVE_CONFIG_H", 
  ]
}

config("public") {
#  defines = [ "_BSD_SOURCE=1" ]
#  include_dirs =
#      [ "porting/include" ] + LWIP_PORTING_INCLUDE_DIRS + LWIP_INCLUDE_DIRS
}
