# Copyright (c) 2021 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//kernel/liteos_m/liteos.gni")

module_name = "sdk"

kernel_module(module_name) {
  sources = [
    "rtos/liteos/liteos_m/main.c",
  ]
  if (!defined(LOSCFG_TEST)) {
    # kernel's testsuites not enabled, use ower's
    sources += [ "rtos/liteos/liteos_m/test/task_demo.c" ]
  }
  include_dirs = [
    "rtos/liteos/liteos_m",
    "rtos/liteos/liteos_m/test",
    "//device/soc/espressif/esp32_wrover_ie/liteos_m/components/fs",
    "//device/soc/espressif/esp32_wrover_ie/liteos_m/sdk/include/board",
    "//device/soc/espressif/esp32_wrover_ie/liteos_m/sdk/include/watchdog",
    "//kernel/liteos_m/include",
  ]
}

config("public") {
  include_dirs = [
    "rtos/liteos/liteos_m",
    "rtos/liteos/liteos_m/test",
  ]
  ldflags = [
    "-Wl,-T" + rebase_path("scripts/link/ESP32.ld"),
    "-nostdlib",
  ]
  libs = [ "gcc" ]
}
